--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,19 @@
   </head>
 
   <body>
-    <%= yield %>
+
+    <nav class="navbar navbar-light bg-light justify-content-between">
+      <div class="navbar-brand">
+        <%= link_to 'Wikinimous', articles_path  %>
+      </div>
+      <div class="nav-item">
+        <%= link_to 'New Article', new_article_path  %>
+      </div>
+    </nav>
+
+    <div class="container">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
