--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,13 +1,13 @@
 <h1 class="text-center">Welcome on Wikinimous</h1>
 
-<h2>Enjoy our anonymous articles:</h2>
+<h2>Enjoy our newest anonymous articles:</h2>
 
 <div class="row">
-  <div class="col-sm-8 col-sm-offset-2">
+  <div class="col-sm-8">
     <% @articles.each do |article| %>
     <article>
       <h3><%= link_to article.title.capitalize, article_path(article)  %></h3>
-      <p><%= article.content %></p>
+      <p><%= article.content.capitalize %></p>
     </article>
     <% end %>
   </div>
