--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
         <%= link_to 'Wikinimous', articles_path  %>
       </div>
       <div class="nav-item">
-        <%= link_to 'New Article', new_article_path  %>
+        <%= link_to '➕New Article', new_article_path  %>
       </div>
     </nav>
 
